remove .py files

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:5d77c96c86460bc6f9dc724ec5eaddda05365704c28911ee1bb6e0448404be5f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,9 +31,9 @@
      "metadata": {},
      "source": [
       "# Question 1\n",
-      "#### (5 points) Carlos goes to the bank to take out a personal loan. The stated annual \n",
-      "#### interest rate is 12%, but interest is compounded monthly and he will make monthly \n",
-      "#### payments. The effective annual interest rate (EAR) of the loan is less than 12%. "
+      "(5 points) Carlos goes to the bank to take out a personal loan. The stated annual \n",
+      "interest rate is 12%, but interest is compounded monthly and he will make monthly \n",
+      "payments. The effective annual interest rate (EAR) of the loan is less than 12%. "
      ]
     },
     {
@@ -60,10 +61,10 @@
      "metadata": {},
      "source": [
       "# Question 2\n",
-      "#### (5 points) Gloria is 35 and trying to plan for retirement. She has put a budget\n",
-      "#### together and plans to save \\$4,800 per year, starting at the end of this year, \n",
-      "#### in a retirement fund until she is 65. Assume that she can make 7% on her account. \n",
-      "#### How much will she have for retirement at age 65? "
+      "(5 points) Gloria is 35 and trying to plan for retirement. She has put a budget\n",
+      "together and plans to save \\$4,800 per year, starting at the end of this year, \n",
+      "in a retirement fund until she is 65. Assume that she can make 7% on her account. \n",
+      "How much will she have for retirement at age 65? "
      ]
     },
     {
@@ -95,12 +96,12 @@
      "metadata": {},
      "source": [
       "### Question 3\n",
-      "#### (5 points) Mohammad has just turned 21 and now has access to the money his parents \n",
-      "#### have been putting away in an account for him since he was 5 years old. His mother \n",
-      "#### has asked him to guess what his account is worth given that they have invested \n",
-      "#### \\$1,000 every year in the account starting on his 5th birthday and have just made one. \n",
-      "#### The interest rate on the account has been 3.5% annually. \n",
-      "#### How much is Mohammad's account worth today? "
+      "(5 points) Mohammad has just turned 21 and now has access to the money his parents \n",
+      "have been putting away in an account for him since he was 5 years old. His mother \n",
+      "has asked him to guess what his account is worth given that they have invested \n",
+      "\\$1,000 every year in the account starting on his 5th birthday and have just made one. \n",
+      "The interest rate on the account has been 3.5% annually. \n",
+      "How much is Mohammad's account worth today? "
      ]
     },
     {
@@ -132,11 +133,11 @@
      "metadata": {},
      "source": [
       "### Question 4\n",
-      "#### (5 points) Marcel has just graduated from college and has found a job that will pay \n",
-      "#### him \\$25,000 per year at the end of each year, but the job is only for 5 years. \n",
-      "#### He is not worried about that because he plans to do an MBA after gaining 5 years \n",
-      "#### experience anyway. What is the value today of his 5-year salary assuming that the \n",
-      "#### interest rate is 3%?"
+      "(5 points) Marcel has just graduated from college and has found a job that will pay \n",
+      "him \\$25,000 per year at the end of each year, but the job is only for 5 years. \n",
+      "He is not worried about that because he plans to do an MBA after gaining 5 years \n",
+      "experience anyway. What is the value today of his 5-year salary assuming that the \n",
+      "interest rate is 3%?"
      ]
     },
     {
@@ -168,11 +169,11 @@
      "metadata": {},
      "source": [
       "### Question 5\n",
-      "#### (10 points) Rachna is considering a life insurance plan that will require her to \n",
-      "#### pay a premium of \\$200 every year for the next 40 years. She wants to make sure \n",
-      "#### that she is able to make this payment and wants to put away a lump sum today in \n",
-      "#### her bank to cover all future payments. How much would she need to deposit in her \n",
-      "#### bank if the annual interest rate on her deposit account is 4%? "
+      "(10 points) Rachna is considering a life insurance plan that will require her to \n",
+      "pay a premium of \\$200 every year for the next 40 years. She wants to make sure \n",
+      "that she is able to make this payment and wants to put away a lump sum today in \n",
+      "her bank to cover all future payments. How much would she need to deposit in her \n",
+      "bank if the annual interest rate on her deposit account is 4%? "
      ]
     },
     {
@@ -204,12 +205,12 @@
      "metadata": {},
      "source": [
       "### Question 6\n",
-      "#### (10 points) Roxanne is in the market for a new house, and she has found a house \n",
-      "#### she likes that is selling for \\$250,000. The down payment on the house is 20% (the \n",
-      "#### amount that the bank should require you to pay in cash) and Roxanne plans to finance\n",
-      "#### the remainder with a fixed rate mortgage. The annual rate is 6% and the mortgage is\n",
-      "#### for 15 years, though payments are monthly. What is the interest component of Roxanne's\n",
-      "#### first monthly payment?"
+      "(10 points) Roxanne is in the market for a new house, and she has found a house \n",
+      "she likes that is selling for \\$250,000. The down payment on the house is 20% (the \n",
+      "amount that the bank should require you to pay in cash) and Roxanne plans to finance\n",
+      "the remainder with a fixed rate mortgage. The annual rate is 6% and the mortgage is\n",
+      "for 15 years, though payments are monthly. What is the interest component of Roxanne's\n",
+      "first monthly payment?"
      ]
     },
     {
@@ -240,10 +241,10 @@
      "metadata": {},
      "source": [
       "### Question 7\n",
-      "#### (15 points) Baako has invested \\$75,000 in a trust fund at 9% for his child's college \n",
-      "#### education. His child will draw \\$30,000 per year for four years, starting at the end \n",
-      "#### of year 7. What will be the amount that will be left over in the education fund at \n",
-      "#### the end of year 10, just after the child has withdrawn the fourth time? "
+      "(15 points) Baako has invested \\$75,000 in a trust fund at 9% for his child's college \n",
+      "education. His child will draw \\$30,000 per year for four years, starting at the end \n",
+      "of year 7. What will be the amount that will be left over in the education fund at \n",
+      "the end of year 10, just after the child has withdrawn the fourth time? "
      ]
     },
     {
@@ -275,13 +276,13 @@
      "metadata": {},
      "source": [
       "### Question 8\n",
-      "#### (15 points) Two years ago Abilia purchased a \\$10,000 car; she paid \\$2,000 down and \n",
-      "#### borrowed the rest. She took a fixed rate 60-month instalment loan at a stated rate\n",
-      "#### of 8% per year. Interest rates have fallen during the last two years and she can \n",
-      "#### refinance her car by borrowing the amount she still owes on the car at a new \n",
-      "#### fixed rate of 6% per year for 3 years. Should Abilia refinance her loan? How \n",
-      "#### much will she save per month for the next three years if she decides to \n",
-      "#### refinance?"
+      "(15 points) Two years ago Abilia purchased a \\$10,000 car; she paid \\$2,000 down and \n",
+      "borrowed the rest. She took a fixed rate 60-month instalment loan at a stated rate\n",
+      "of 8% per year. Interest rates have fallen during the last two years and she can \n",
+      "refinance her car by borrowing the amount she still owes on the car at a new \n",
+      "fixed rate of 6% per year for 3 years. Should Abilia refinance her loan? How \n",
+      "much will she save per month for the next three years if she decides to \n",
+      "refinance?"
      ]
     },
     {
@@ -323,14 +324,14 @@
      "metadata": {},
      "source": [
       "### Question 9\n",
-      "#### (15 points) Two years ago, you purchased a \\$20,000 car, putting \\$4,000 down and \n",
-      "#### borrowing the rest. Your loan was a 48-month fixed rate loan at a stated rate \n",
-      "#### of 6% per year.You paid a non-refundable application fee of $100 at that time \n",
-      "#### in cash. Interest rates have fallen during the last two years and a new bank \n",
-      "#### now offers to refinance your car by lending you the balance due at a stated rate\n",
-      "#### of 4% per year. You will use the proceeds of this loan to pay off the old loan. \n",
-      "#### Suppose the new loan requires a \\$200 non-refundable application fee. Given all \n",
-      "#### this information, should you refinance? How much do you gain/lose if you do?"
+      "(15 points) Two years ago, you purchased a \\$20,000 car, putting \\$4,000 down and \n",
+      "borrowing the rest. Your loan was a 48-month fixed rate loan at a stated rate \n",
+      "of 6% per year.You paid a non-refundable application fee of $100 at that time \n",
+      "in cash. Interest rates have fallen during the last two years and a new bank \n",
+      "now offers to refinance your car by lending you the balance due at a stated rate\n",
+      "of 4% per year. You will use the proceeds of this loan to pay off the old loan. \n",
+      "Suppose the new loan requires a \\$200 non-refundable application fee. Given all \n",
+      "this information, should you refinance? How much do you gain/lose if you do?"
      ]
     },
     {
@@ -372,14 +373,14 @@
      "metadata": {},
      "source": [
       "### Question 10\n",
-      "#### (15 points) You have just started your first job and you want to have the basic \n",
-      "#### appliances (fridge, washer, dryer, etc.) in your apartment. You face the \n",
-      "#### following choices: (i) Purchase all appliances at the store using a bank loan. \n",
-      "#### There is no down payment as the bank can take your appliances if you default on \n",
-      "#### the loan. The loan is at the annual market rate of 5%, and the loan amount is \n",
-      "#### \\$6,000 to be repaid monthly over 4 years.(ii) Rent-to-buy from the same store. \n",
-      "#### The monthly rental is \\$125 for 48 months and then you pay $1,000 to own all the \n",
-      "#### appliances. What is the net cost today of the cheapest option?"
+      "(15 points) You have just started your first job and you want to have the basic \n",
+      "appliances (fridge, washer, dryer, etc.) in your apartment. You face the \n",
+      "following choices: (i) Purchase all appliances at the store using a bank loan. \n",
+      "There is no down payment as the bank can take your appliances if you default on \n",
+      "the loan. The loan is at the annual market rate of 5%, and the loan amount is \n",
+      "\\$6,000 to be repaid monthly over 4 years.(ii) Rent-to-buy from the same store. \n",
+      "The monthly rental is \\$125 for 48 months and then you pay $1,000 to own all the \n",
+      "appliances. What is the net cost today of the cheapest option?"
      ]
     },
     {
@@ -411,15 +412,15 @@
      "metadata": {},
      "source": [
       "### Extra Question: 1\n",
-      "#### (15 points) You are interested in a new Ford Taurus. After visiting your Ford dealer, \n",
-      "#### doing your research on the best leases available, you have three options. (i) Purchase \n",
-      "#### the car for cash and receive a \\$1,500 cash rebate from Dealer A. The price of the car is \n",
-      "#### \\$15,000. (ii) Lease the car from Dealer B. Under this option, you pay the dealer \\$500 now \n",
-      "#### and \\$200 a month for each of the next 36 months (the first \\$200 payment occurs 1 month \n",
-      "#### from today). After 36 months you may buy the car for \\$8,000. (iii) Purchase the car from \n",
-      "#### Dealer C who will lend you the entire purchase price of the car for a zero interest \n",
-      "#### 36-month loan with monthly payments. The car price is $15,000. Suppose the market interest \n",
-      "#### rate is 6%. What is the net cost today of the cheapest option? "
+      "(15 points) You are interested in a new Ford Taurus. After visiting your Ford dealer, \n",
+      "doing your research on the best leases available, you have three options. (i) Purchase \n",
+      "the car for cash and receive a \\$1,500 cash rebate from Dealer A. The price of the car is \n",
+      "\\$15,000. (ii) Lease the car from Dealer B. Under this option, you pay the dealer \\$500 now \n",
+      "and \\$200 a month for each of the next 36 months (the first \\$200 payment occurs 1 month \n",
+      "from today). After 36 months you may buy the car for \\$8,000. (iii) Purchase the car from \n",
+      "Dealer C who will lend you the entire purchase price of the car for a zero interest \n",
+      "36-month loan with monthly payments. The car price is $15,000. Suppose the market interest \n",
+      "rate is 6%. What is the net cost today of the cheapest option? "
      ]
     },
     {
@@ -474,13 +475,13 @@
      "metadata": {},
      "source": [
       "### Extra Question: 2\n",
-      "#### Suppose you are exactly 30 years old. You believe that you will be able to save for\n",
-      "#### the next 20 years, until you are 50. For 10 years following that, and till your \n",
-      "#### retirement at age 60, you will have a spike in expenses and you will not be\n",
-      "#### able to save. If you want to guarantee yourself \\$8,000 per month starting one month \n",
-      "#### after your 60th birthday, how much should you save every month, for the next 20 years\n",
-      "#### starting at the end of next month. Assume your investments are expected to yield 8%\n",
-      "#### annually and you are likely to live till 80.\n"
+      "Suppose you are exactly 30 years old. You believe that you will be able to save for\n",
+      "the next 20 years, until you are 50. For 10 years following that, and till your \n",
+      "retirement at age 60, you will have a spike in expenses and you will not be\n",
+      "able to save. If you want to guarantee yourself \\$8,000 per month starting one month \n",
+      "after your 60th birthday, how much should you save every month, for the next 20 years\n",
+      "starting at the end of next month. Assume your investments are expected to yield 8%\n",
+      "annually and you are likely to live till 80.\n"
      ]
     },
     {
