--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:a601d6153ee671cd0d8cf3fb4f9aba6221b6fcc791e3cc3ff39854a743824167"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,12 +31,12 @@
      "metadata": {},
      "source": [
       "### Question 1\n",
-      "#### (5 points) Becky needs another \\$1,200 in her vehicle fund to purchase the car she wants. Her \n",
-      "#### parents offer to loan her the money, but want to teach her about the time value of money. They \n",
-      "#### offer to have her repay the loan in the future using birthday and holiday money. They agree \n",
-      "#### that she will repay \\$450 at each of her next two birthdays and one holiday season. These events\n",
-      "#### are 3, 6 and 15 months from now. Assume a 6% cost of capital. Assume there is no risk of \n",
-      "#### default, and that compounding is monthly. What is the NPV of the loan?"
+      "(5 points) Becky needs another \\$1,200 in her vehicle fund to purchase the car she wants. Her \n",
+      "parents offer to loan her the money, but want to teach her about the time value of money. They \n",
+      "offer to have her repay the loan in the future using birthday and holiday money. They agree \n",
+      "that she will repay \\$450 at each of her next two birthdays and one holiday season. These events\n",
+      "are 3, 6 and 15 months from now. Assume a 6% cost of capital. Assume there is no risk of \n",
+      "default, and that compounding is monthly. What is the NPV of the loan?"
      ]
     },
     {
@@ -66,12 +67,12 @@
      "metadata": {},
      "source": [
       "### Question 2\n",
-      "#### (5 points) Jacob has an opportunity to invest in a new retail development in his building. The \n",
-      "#### initial investment is \\$50,000 and the expected cashflows are as follows: Year 1: \\$2,500 Year 2: \n",
-      "#### \\$5,000 Year 3: \\$5,000 Year 4: \\$7,500 Year 5: \\$10,000 Year 6: \\$10,000 Year 7: \\$15,000 Year 8: \n",
-      "#### \\$15,000 What is Jacob's IRR on this investment? (Enter the answer with no more nor less than \n",
-      "#### two decimal places, and leave off the % sign. For example, if your answer is 13.97% you should \n",
-      "#### enter it as 13.97 NOT 0.14 nor 14)"
+      "(5 points) Jacob has an opportunity to invest in a new retail development in his building. The \n",
+      "initial investment is \\$50,000 and the expected cashflows are as follows: Year 1: \\$2,500 Year 2: \n",
+      "\\$5,000 Year 3: \\$5,000 Year 4: \\$7,500 Year 5: \\$10,000 Year 6: \\$10,000 Year 7: \\$15,000 Year 8: \n",
+      "\\$15,000 What is Jacob's IRR on this investment? (Enter the answer with no more nor less than \n",
+      "two decimal places, and leave off the % sign. For example, if your answer is 13.97% you should \n",
+      "enter it as 13.97 NOT 0.14 nor 14)"
      ]
     },
     {
@@ -113,14 +114,14 @@
      "metadata": {},
      "source": [
       "### Question 3\n",
-      "#### (5 points) Fabrice is looking to buy a new plug-in hybrid vehicle. The purchase price is \\$12,000\n",
-      "#### more than a similar conventional model. However, he will receive a \\$7,500 federal tax credit \n",
-      "#### that he will realize at the end of the year. He estimates that he will save \\$1,200 per year in \n",
-      "#### gas over the conventional model; these cash outflows can be assumed to occur at the end of the \n",
-      "#### year. The cost of capital (or interest rate) for Fabrice is 6%. How long will Fabrice have to \n",
-      "#### own the vehicle to justify the additional expense over the conventional model?( i.e, What is the\n",
-      "#### DISCOUNTED payback period in years? Discount future cash flows before calculating payback and \n",
-      "#### round to a whole year.)"
+      "(5 points) Fabrice is looking to buy a new plug-in hybrid vehicle. The purchase price is \\$12,000\n",
+      "more than a similar conventional model. However, he will receive a \\$7,500 federal tax credit \n",
+      "that he will realize at the end of the year. He estimates that he will save \\$1,200 per year in \n",
+      "gas over the conventional model; these cash outflows can be assumed to occur at the end of the \n",
+      "year. The cost of capital (or interest rate) for Fabrice is 6%. How long will Fabrice have to \n",
+      "own the vehicle to justify the additional expense over the conventional model?( i.e, What is the\n",
+      "DISCOUNTED payback period in years? Discount future cash flows before calculating payback and \n",
+      "round to a whole year.)"
      ]
     },
     {
@@ -158,18 +159,18 @@
      "metadata": {},
      "source": [
       "### Question 4\n",
-      "#### (10 points) In high school Jeff often made money in the summer by mowing lawns in the \n",
-      "#### neighborhood. He just finished his freshman year of college and, after taking a Business \n",
-      "#### 101 class, he has some ideas about how to scale up his lawn mowing operation. Previously, \n",
-      "#### he had used his father's push mower, but he is thinking about getting a riding mower that \n",
-      "#### will save time and allow him to do more lawns. He found a used, zero turn, riding mower on \n",
-      "#### Craigslist for \\$1,200. He will also need a trailer to pull the mower behind his pickup; that \n",
-      "#### will cost him an additional \\$600. With the new mower he can take on an additional 20 lawns \n",
-      "#### per week at an average cash inflow of \\$20 per lawn he will receive at the end of each week. \n",
-      "#### He has 14 weeks of summer in which to mow lawns. (For convenience, assume that the mower and \n",
-      "#### trailer will have no value after Jeff is done with his work this summer.) The discount rate \n",
-      "#### for Jeff is 10% (Keep in mind this is an annual rate). What is the Net Present Value of the \n",
-      "#### mower/trailer project?"
+      "(10 points) In high school Jeff often made money in the summer by mowing lawns in the \n",
+      "neighborhood. He just finished his freshman year of college and, after taking a Business \n",
+      "101 class, he has some ideas about how to scale up his lawn mowing operation. Previously, \n",
+      "he had used his father's push mower, but he is thinking about getting a riding mower that \n",
+      "will save time and allow him to do more lawns. He found a used, zero turn, riding mower on \n",
+      "Craigslist for \\$1,200. He will also need a trailer to pull the mower behind his pickup; that \n",
+      "will cost him an additional \\$600. With the new mower he can take on an additional 20 lawns \n",
+      "per week at an average cash inflow of \\$20 per lawn he will receive at the end of each week. \n",
+      "He has 14 weeks of summer in which to mow lawns. (For convenience, assume that the mower and \n",
+      "trailer will have no value after Jeff is done with his work this summer.) The discount rate \n",
+      "for Jeff is 10% (Keep in mind this is an annual rate). What is the Net Present Value of the \n",
+      "mower/trailer project?"
      ]
     },
     {
@@ -204,13 +205,13 @@
      "metadata": {},
      "source": [
       "### Question 5\n",
-      "#### (10 points) Da Feng is looking to refinance his home because rates have gone down since he \n",
-      "#### purchased the house 5 years ago. He started with a 30-year fixed-rate mortgage of \\$240,000 at \n",
-      "#### an annual rate of 6.75%. He has to make monthly payments. He can now get a 25-year fixed-rate \n",
-      "#### mortgage at an annual rate of 5.5% on the remaining balance of his initial mortgage. This loan \n",
-      "#### also requires monthly payments. In order to re-finance, Da Feng will need to pay closing costs \n",
-      "#### of \\$4,500. These costs are out of pocket and cannot be rolled into the new mortgage. How much \n",
-      "#### will refinancing save Da Feng? (i.e. What is the NPV of the refinancing decision?)"
+      "(10 points) Da Feng is looking to refinance his home because rates have gone down since he \n",
+      "purchased the house 5 years ago. He started with a 30-year fixed-rate mortgage of \\$240,000 at \n",
+      "an annual rate of 6.75%. He has to make monthly payments. He can now get a 25-year fixed-rate \n",
+      "mortgage at an annual rate of 5.5% on the remaining balance of his initial mortgage. This loan \n",
+      "also requires monthly payments. In order to re-finance, Da Feng will need to pay closing costs \n",
+      "of \\$4,500. These costs are out of pocket and cannot be rolled into the new mortgage. How much \n",
+      "will refinancing save Da Feng? (i.e. What is the NPV of the refinancing decision?)"
      ]
     },
     {
@@ -250,11 +251,11 @@
      "metadata": {},
      "source": [
       "### Question 6\n",
-      "#### (10 points) The United States purchased Alaska in 1867 for \\$7.2M (where M stands for million). \n",
-      "#### Assume that federal tax revenue from the state of Alaska (net federal expenditures) will be \n",
-      "#### \\$50M in 2012 and that tax revenue started in 1868 and has steadily increased by 3% annually \n",
-      "#### since then. Assume that the cost of capital (or interest rate) is 7%. What is the NPV of the \n",
-      "#### Alaska purchase? (Hint: Try and imagine you are in 1867 looking forward.)"
+      "(10 points) The United States purchased Alaska in 1867 for \\$7.2M (where M stands for million). \n",
+      "Assume that federal tax revenue from the state of Alaska (net federal expenditures) will be \n",
+      "\\$50M in 2012 and that tax revenue started in 1868 and has steadily increased by 3% annually \n",
+      "since then. Assume that the cost of capital (or interest rate) is 7%. What is the NPV of the \n",
+      "Alaska purchase? (Hint: Try and imagine you are in 1867 looking forward.)"
      ]
     },
     {
@@ -291,15 +292,15 @@
      "metadata": {},
      "source": [
       "### Question 7\n",
-      "#### (10 points) This question introduces you to the concept of an annuity with growth. The formula \n",
-      "#### is given on p.3, equation (7), of the Note on Formulae, but I would encourage you to try doing \n",
-      "#### it in Excel as well. (If the first cash flow is C, the next one will be C(1+g), and so on, \n",
-      "#### where g is the growth rate in cash flow). As an example, the present value of an annuity that \n",
-      "#### starts one year from now at \\$100, and grows at 5%, with the last cash flow in year 10, when the\n",
-      "#### discount rate is 7%, is \\$860. Confirm this before attempting the problem; and use both the \n",
-      "#### formula and excel. What is the NPV of of a new software project that costs \\$1,000,000 today, \n",
-      "#### but has a cash flow of \\$200,000 in year 1 that grows at 3% per year till year 20? Similar\n",
-      "#### investments earn 7.5% per year."
+      "(10 points) This question introduces you to the concept of an annuity with growth. The formula \n",
+      "is given on p.3, equation (7), of the Note on Formulae, but I would encourage you to try doing \n",
+      "it in Excel as well. (If the first cash flow is C, the next one will be C(1+g), and so on, \n",
+      "where g is the growth rate in cash flow). As an example, the present value of an annuity that \n",
+      "starts one year from now at \\$100, and grows at 5%, with the last cash flow in year 10, when the\n",
+      "discount rate is 7%, is \\$860. Confirm this before attempting the problem; and use both the \n",
+      "formula and excel. What is the NPV of of a new software project that costs \\$1,000,000 today, \n",
+      "but has a cash flow of \\$200,000 in year 1 that grows at 3% per year till year 20? Similar\n",
+      "investments earn 7.5% per year."
      ]
     },
     {
@@ -336,18 +337,18 @@
      "metadata": {},
      "source": [
       "### Question 8\n",
-      "#### (15 points) Rebecca is 28 and considering going to graduate school so she sits down to \n",
-      "#### calculate whether it is worth the large sum of money. She knows that her first year tuition \n",
-      "#### will be \\$40,000, due at the beginning of the year (that is, right away). She estimates that \n",
-      "#### the 2nd year of tuition would be \\$42,000. She also estimates that her living expenses above \n",
-      "#### and beyond tuition will be \\$8,000 per year (assume this occurs at the end of the year) for the \n",
-      "#### first year and will increase to \\$9000 the next year. She expects to earn \\$18,000 for an \n",
-      "#### internship (Assume this inflow occurs one year from now). Were she to forgo graduate school she \n",
-      "#### would be able to make \\$55,000 at the end of this year and expects that to grow 3% annually. With\n",
-      "#### a graduate degree, she estimates that she will earn \\$85,000/year after graduation, again with \n",
-      "#### annual 3% increases. Either way, she plans to work until 60 (she begins college right away). \n",
-      "#### The interest/discount rate is 6%. What is the NPV of her graduate education? (Note: All cash \n",
-      "#### flows except tuition payments occur at the end of the year.)\n"
+      "(15 points) Rebecca is 28 and considering going to graduate school so she sits down to \n",
+      "calculate whether it is worth the large sum of money. She knows that her first year tuition \n",
+      "will be \\$40,000, due at the beginning of the year (that is, right away). She estimates that \n",
+      "the 2nd year of tuition would be \\$42,000. She also estimates that her living expenses above \n",
+      "and beyond tuition will be \\$8,000 per year (assume this occurs at the end of the year) for the \n",
+      "first year and will increase to \\$9000 the next year. She expects to earn \\$18,000 for an \n",
+      "internship (Assume this inflow occurs one year from now). Were she to forgo graduate school she \n",
+      "would be able to make \\$55,000 at the end of this year and expects that to grow 3% annually. With\n",
+      "a graduate degree, she estimates that she will earn \\$85,000/year after graduation, again with \n",
+      "annual 3% increases. Either way, she plans to work until 60 (she begins college right away). \n",
+      "The interest/discount rate is 6%. What is the NPV of her graduate education? (Note: All cash \n",
+      "flows except tuition payments occur at the end of the year.)\n"
      ]
     },
     {
@@ -400,12 +401,12 @@
      "metadata": {},
      "source": [
       "### Question 9\n",
-      "#### (15 points) Reggie has just taken over management of a family business. He wants to make sure \n",
-      "#### that it makes financial sense to keep the business going. He could sell the building today for \n",
-      "#### \\$520,000. Keeping the business going will require a \\$50,000 renovation now and will yield an\n",
-      "#### annual profit of \\$72,000 for the next 20 years (for simplicity assume these occur at year end, \n",
-      "#### beginning one year from now). The discount/interest rate is 10%? What are the NPV and IRR of \n",
-      "#### this decision?"
+      "(15 points) Reggie has just taken over management of a family business. He wants to make sure \n",
+      "that it makes financial sense to keep the business going. He could sell the building today for \n",
+      "\\$520,000. Keeping the business going will require a \\$50,000 renovation now and will yield an\n",
+      "annual profit of \\$72,000 for the next 20 years (for simplicity assume these occur at year end, \n",
+      "beginning one year from now). The discount/interest rate is 10%? What are the NPV and IRR of \n",
+      "this decision?"
      ]
     },
     {
@@ -443,11 +444,11 @@
      "metadata": {},
      "source": [
       "### Question 10\n",
-      "#### (15 points) Sairah purchased an investment property for \\$350,000, 3 years ago. The after-tax \n",
-      "#### cashfow of the property has been \\$35,000 per year to date, but market conditions have improved \n",
-      "#### and Sairah expects the cashflow to improve to \\$42,000 per year for the next 25 years (assume \n",
-      "#### these are year end cashflows). The annual cost of capital (or cap rate) for this area is 9%. \n",
-      "#### What is the value of the property today?"
+      "(15 points) Sairah purchased an investment property for \\$350,000, 3 years ago. The after-tax \n",
+      "cashfow of the property has been \\$35,000 per year to date, but market conditions have improved \n",
+      "and Sairah expects the cashflow to improve to \\$42,000 per year for the next 25 years (assume \n",
+      "these are year end cashflows). The annual cost of capital (or cap rate) for this area is 9%. \n",
+      "What is the value of the property today?"
      ]
     },
     {
