--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:493ab6bb6414e3b8621bd939193c1913a3485ea1f653ba614aaaaaa8576ebc93"
+  "signature": "sha256:ea0de24e9c24529e816c211b89b6bc22e37d4e822ab9d9afe5d40b5018a96db2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -378,123 +378,69 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
+      "import numpy  as np\n",
       "\n",
-      "life = 15\n",
-      "rev = [9.5] + [8.1]*life\n",
-      "cogs = [3] + [4]*life\n",
-      "data = {'COGS':cogs, 'Revenue': rev}\n",
-      "cols = ['Revenue', 'COGS']\n",
-      "pd.DataFrame(data, columns=cols).T"
+      "r     = 0.14   # 14%/yr discount rate\n",
+      "g     = 0.25   # 25%/yr revenue/cost growth rate\n",
+      "t     = 0.35   # 35%/yr tax rate\n",
+      "life  = 2016 - 2012 \n",
+      "capex = 12e6   # $12M CapEx\n",
+      "term  =  5e6   #  $5M terminal value\n",
+      "sales = [0] + [+fi.rnd(fi.comp(15e6, i, g)) for i in range(life)]\n",
+      "cogs  = [0] + [-fi.rnd(fi.comp( 9e6, i, g)) for i in range(life)]\n",
+      "deprc = [0] + [-capex/life          for _ in range(life)]\n",
+      "oppft = [0]*(life+1)\n",
+      "for i in range(life+1): oppft[i] = sales[i] + cogs[i] + deprc[i]\n",
+      "taxes = [fi.rnd(-t*p) for p in oppft]\n",
+      "nopat = [0]*(life+1)\n",
+      "for i in range(life+1): nopat[i] = oppft[i] + taxes[i]\n",
+      "fcf   = [-capex] + [0]*(life)\n",
+      "for i in range(life+1): fcf[i] += nopat[i] - deprc[i]\n",
+      "npv = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "\n",
+      "years = [2012 + i for i in range(0, life+1)]\n",
+      "data  = {'COGS':cogs, \n",
+      "         'Revenue': sales, \n",
+      "         'Less Dep': deprc, \n",
+      "         'Operating Profits': oppft, \n",
+      "         'Tax': taxes, \n",
+      "         'NOPAT': nopat,\n",
+      "         'Plus Dep': [-d for d in deprc],\n",
+      "         'CAPX': [-capex] + [0]*life,\n",
+      "         'Free Cash Flow': fcf}\n",
+      "cols  = ['Revenue', 'COGS', 'Less Dep', 'Operating Profits', 'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow']\n",
+      "df    = pd.DataFrame(data, columns=cols, index=years)\n",
+      "\n",
+      "print \n",
+      "print df.T\n",
+      "print \"\\nProject NPV = %d\" % fi.rnd(npv) "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>0</th>\n",
-        "      <th>1</th>\n",
-        "      <th>2</th>\n",
-        "      <th>3</th>\n",
-        "      <th>4</th>\n",
-        "      <th>5</th>\n",
-        "      <th>6</th>\n",
-        "      <th>7</th>\n",
-        "      <th>8</th>\n",
-        "      <th>9</th>\n",
-        "      <th>10</th>\n",
-        "      <th>11</th>\n",
-        "      <th>12</th>\n",
-        "      <th>13</th>\n",
-        "      <th>14</th>\n",
-        "      <th>15</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>Revenue</th>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "      <td> 8.1</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>COGS</th>\n",
-        "      <td> 3.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "      <td> 4.0</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "<p>2 rows \u00d7 16 columns</p>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "          0    1    2    3    4    5    6    7    8    9    10   11   12   13  \\\n",
-        "Revenue  9.5  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1  8.1   \n",
-        "COGS     3.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0  4.0   \n",
         "\n",
-        "          14   15  \n",
-        "Revenue  8.1  8.1  \n",
-        "COGS     4.0  4.0  \n",
+        "                       2012      2013      2014      2015      2016\n",
+        "Revenue                   0  15000000  18750000  23437500  29296875\n",
+        "COGS                      0  -9000000 -11250000 -14062500 -17578125\n",
+        "Less Dep                  0  -3000000  -3000000  -3000000  -3000000\n",
+        "Operating Profits         0   3000000   4500000   6375000   8718750\n",
+        "Tax                       0  -1050000  -1575000  -2231250  -3051563\n",
+        "NOPAT                     0   1950000   2925000   4143750   5667187\n",
+        "Plus Dep                  0   3000000   3000000   3000000   3000000\n",
+        "CAPX              -12000000         0         0         0         0\n",
+        "Free Cash Flow    -12000000   4950000   5925000   7143750   8667187\n",
         "\n",
-        "[2 rows x 16 columns]"
+        "[9 rows x 5 columns]\n",
+        "\n",
+        "Project NPV = 9815100\n"
        ]
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'<Missing!>'"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "'<Missing!>'"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "prompt_number": 55
     },
     {
      "cell_type": "markdown",
